--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 						<h1 class="text-center hero-bloc-text">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
+						<p class="text-center mg-lg tc-white tc-white-modif tight-width-whitespace">
 							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
@@ -77,25 +77,25 @@
 					<div class="col-sm-12">
 						<form id="form" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
-								<label>
+								<label for="name">
 									Nom :
 								</label><br>
-								<input id="name" class="form-control" type="text" name="name" required />
+								<input type="text" id="name" class="form-control" name="name" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="email">
 									Adresse email :
 								</label><br>
-								<input id="email" class="form-control" type="email" name="email" required />
+								<input type="email" id="email" class="form-control"  name="email" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="input_504">
 									Comment nous avez-vous connu ?
 								</label><br>
-								<input class="form-control" type="text" required id="input_504" />
+								<input class="form-control" type="text" required id="input_504"/>
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="message">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)
 								</label><br>
 								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
