--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style-mini.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-mini.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-mini.css">
 	
@@ -237,7 +237,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<h4 class="text-center white font-size">
+						<h4 class="text-center font-size">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</h4>
 						<div class="row row-no-gutters social">
@@ -265,7 +265,7 @@
 								<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
 						</div>
 						<div class="text-center">
-							<p class="white font-size">Nos Partenaires</p>
+							<p class="font-size">Nos Partenaires</p>
 							<div class="font-size text-align">
 								<ul>
 									<li><a href="#">voiture.com</a></li>
