--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
  
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style-mini.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-mini.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-mini.css">
 	<link rel="canonical" href="https://yann-sm.github.io/contact.html"/>
@@ -125,7 +125,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center font-size white">
+						<p class="text-center font-size ">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
