--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style-mini.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome-mini.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line-mini.css">
 	
